Replace deprecated code usage